--- a/TVShows/TVShows/Comments/Comments.storyboard
+++ b/TVShows/TVShows/Comments/Comments.storyboard
@@ -127,7 +127,7 @@
                                 </constraints>
                             </view>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="img-placehoder-comments" translatesAutoresizingMaskIntoConstraints="NO" id="pSx-O1-cSF">
-                                <rect key="frame" x="126.99999999999999" y="188" width="160.00000000000003" height="160"/>
+                                <rect key="frame" x="127" y="188" width="160" height="160"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="160" id="Fz1-YX-xgp"/>
                                     <constraint firstAttribute="height" constant="160" id="Q3Q-Cd-2Da"/>
